<resources>
    <string name="app_name">Smsar</string>
    <string name="title_activity_smsar_main">Smsar</string>
    <string name="title_home">Home</string>
    <string name="title_Discover">Discover</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_notification">Notification</string>
    <string name="title_account">Account</string>
    <string name="title_AddNew">Add New</string>
    <string name="NOR">Number of Rooms</string>
    <string name="NOF">Number of Floors</string>

    <string name="title_setting">Setting</string>
    <string name="title_About">About Us</string>
    <string name="title_like">Liked</string>
    <string name="title_newApartment">Add Apartment</string>
    <string name="title_contact">Contact Us</string>


    <string name="title_filter">Filter</string>
    <string name="title_sort">Sort</string>

    <string name="title_username">Username</string>
    <string name="title_password">Password</string>
    <string name="title_login">Login</string>
    <string name="title_smsar">Smsar ?</string>
    <string name="title_vistor">Seeker ?</string>

    <string-array name="settings">
        <item>Set your Fee</item>
        <item>Change PhoneNumber</item>
        <item>Change Email</item>
        <item>Change Password</item>
        <item>Logout</item>
        <item>Delete Account</item>
    </string-array>
    <string-array name="cities">
        <item>Amman</item>
        <item>Irbid</item>
        <item>Al Zarqa</item>
        <item>Al Mafraq</item>
        <item>AL Aqba</item>
        <item>Al Karak</item>
        <item>Maan</item>
        <item>Ajloun</item>
        <item>Madba</item>
        <item>Al Tafila</item>
        <item>Al Patra</item>
        <item>Al Ramtha</item>
    </string-array>
    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">Discover</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_up"> &lt;u>Sign Up&lt;/u></string>
    <string name="passwrod">Passwrod</string>
    <string name="seeker">Seeker</string>
    <string name="smsar">Smsar</string>
    <string name="liked_List_Description">Here where the List of Estates you will bookmarked will appear</string>
    <string name="signUp_description">You need to have account to show you the list </string>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="enter_the_pin_you_received_in_email">Enter the PIN You Received in Email</string>
    <string name="enter_your_username_and_we_will_send_you_a_email_with_reset_description">Enter Your Username and we will send you an Email with Reset Description</string>
    <string name="forgot_your_password">Forgot Your Password ? </string>
    <string name="GOOGLE_API_KEY" translatable="false">AIzaSyBVaRYLrbto_7cgUUSamJ3c4PjVuPxz8ME</string>
    <string name="details">Details</string>


</resources>
