<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/dashboard"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_newApartment"
        android:icon="@drawable/plus2"
        android:title="@string/title_AddNew" />

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/discover"
        android:title="@string/title_Discover" />



    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/inbox"
        android:title="@string/title_inbox" />


    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/account"
        android:title="@string/title_account" />


</menu>
