<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.yasoft.smsar.SmsarMainActivity"
    >

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/plustitlebar"
        android:title="@string/title_newApartment"
        android:iconTint="@android:color/white"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/plus"
        android:title="@string/title_setting"
        android:iconTint="@android:color/white"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_contact"
        android:title="@string/title_contact"
        android:iconTint="@android:color/white"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_about"
        android:title="@string/title_About"
        android:iconTint="@android:color/white"
        app:showAsAction="never"
        />
</menu>