<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ms_white"
    tools:context=".StartInterface"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/MainFragment">


    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="227dp"
        android:layout_height="202dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:contentDescription="Logo"
        android:src="@drawable/logo_c" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/app_name"
        android:textColor="@color/primary_colored"
        android:textSize="32sp" />
    <Button
        android:id="@+id/smsar"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/nunito"
        android:text="@string/title_smsar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/ms_white"
        android:textSize="18sp"
        android:typeface="normal"
        android:visibility="visible" />

    <Button
        android:id="@+id/seeker"
        android:layout_width="204dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="138dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/nunito"
        android:text="@string/title_vistor"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/ms_white"
        android:textSize="18sp"
        android:visibility="visible" />
</RelativeLayout>