<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ResetPassword">

    <RelativeLayout
        android:id="@+id/resetPasswordToolBar"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@color/ms_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunito_bold"
            android:text="Reset Password"
            android:textColor="@color/primary_colored"
            android:textSize="28sp" />

        <Button
            android:id="@+id/city"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="81dp"
            android:layout_marginBottom="299dp"
            android:background="@color/white_transparency"
            android:drawableEnd="@drawable/ic_arrow_right_16px"
            android:hint="Amman"
            android:paddingStart="18dp"
            android:paddingTop="15dp"
            android:paddingEnd="12dp"
            android:text="Amman"
            android:textAlignment="textStart"
            android:textAppearance="@style/Widget.MaterialComponents.Chip.Filter"
            android:textColor="@color/buttons"
            android:textColorHint="@color/gray_btn_bg_color"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="87dp"
            android:clickable="true"
            android:paddingStart="12dp"
            android:text="LOCATION"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/userNameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_below="@id/resetPasswordToolBar"
        android:visibility="visible">

        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:text="@string/enter_your_username_and_we_will_send_you_a_email_with_reset_description"
            android:textColor="@color/primary_colored"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/userNameEntry"
            android:layout_width="154dp"
            android:layout_height="61dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="234dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:hint="@string/title_username"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"

            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pinVerifyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_below="@id/resetPasswordToolBar"
        android:visibility="gone">

        <TextView
            android:id="@+id/pinLabel"
            android:layout_width="292dp"
            android:layout_height="92dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="58dp"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center"
            android:text="@string/enter_the_pin_you_received_in_email"
            android:textColor="@color/primary_colored"
            android:textSize="24sp"


            />

        <EditText

            android:id="@+id/pinEntry"
            android:layout_width="154dp"
            android:layout_height="61dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="132dp"
            android:layout_marginTop="234dp"
            android:layout_marginEnd="125dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:hint="PIN"
            android:inputType="number"
            android:maxLength="6"
            android:paddingStart="4dp"
            android:paddingEnd="4dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/passwordResetView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_below="@id/resetPasswordToolBar"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/newPasswordLabel"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="31dp"
            android:layout_marginTop="192dp"
            android:layout_marginEnd="244dp"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center"
            android:text="New Password"
            android:textColor="@color/primary_colored"


            android:textSize="14sp" />

        <EditText

            android:id="@+id/newPasswordEntry"
            android:layout_width="154dp"
            android:layout_height="61dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="234dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:hint="New Password"
            android:inputType="textPassword"
            android:maxLength="6"
            android:paddingStart="4dp"
            android:paddingEnd="4dp" />


        <TextView
            android:id="@+id/repeatPasswordLabel"
            android:layout_width="149dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="31dp"
            android:layout_marginTop="351dp"
            android:layout_marginEnd="232dp"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center"
            android:text="Repeat Password"
            android:textColor="@color/primary_colored"


            android:textSize="14sp" />

        <EditText

            android:id="@+id/repeatPasswordEntry"
            android:layout_width="154dp"
            android:layout_height="61dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="386dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:hint="Repeat Password"
            android:inputType="textPassword"
            android:maxLength="6"
            android:paddingStart="4dp"
            android:paddingEnd="4dp" />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="303dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/Primary"
        android:clickable="true"
        app:backgroundTint="@color/buttons"
        app:fabCustomSize="@android:dimen/notification_large_icon_width"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="30dp"
        app:srcCompat="@drawable/ic_done" />

</RelativeLayout>